--- a/mfscrm/crm/templates/crm/product_list.html
+++ b/mfscrm/crm/templates/crm/product_list.html
@@ -32,6 +32,7 @@
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
+                <th>Customer</th>
                 <th>Product</th>
                 <th>Description</th>
                 <th>Quantity</th>
@@ -44,6 +45,7 @@
             {% for product in product %}
                 <tr>
                     <td>{{ product.cust_name }}</td>
+                    <td>{{ product.product }}</td>
                     <td>{{ product.p_description }}</td>
                     <td>{{ product.quantity }}</td>
                     <td>{{ product.pickup_time }}</td>
